<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_smal_margin"
        android:layout_marginEnd="@dimen/very_smal_margin"
        android:layout_marginBottom="@dimen/very_smal_margin"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_office_name"
            style="@style/rc_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="@dimen/very_smal_margin"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            tools:text="Recycler header" />


        <TextView
            android:id="@+id/txt_official_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/meduum_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/www_icon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/txt_office_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Recycler header" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="@dimen/very_smal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            android:contentDescription="@string/profile_image"
            app:srcCompat="@drawable/ic_profile" />


        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/twitter_icon"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="@+id/www_icon"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            android:contentDescription="@string/facebook_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/www_icon"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:layout_constraintTop_toBottomOf="@+id/txt_office_name"
            app:srcCompat="@drawable/ic_www" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>