<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfoResponse.election.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            style="@style/rc_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:buttonVisibility = "@{viewModel.status}"
            android:text="@{viewModel.voterInfoResponse.election.electionDay.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />


        <TextView
            android:id="@+id/state_header"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/meduum_margin"
            android:text="@string/election_information"
            app:buttonVisibility = "@{viewModel.status}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="State header" />


        <TextView
            android:id="@+id/state_locations"
            style="@style/rc_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onVoteLocationClick()}"
            android:text="@string/voting_location"
            app:buttonVisibility = "@{viewModel.status}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="State location" />


        <TextView
            android:id="@+id/state_ballot"
            style="@style/rc_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onBallotClick()}"
            android:text="@string/ballot_information"
            app:buttonVisibility = "@{viewModel.status}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:text="State baloot" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            app:buttonVisibility = "@{viewModel.status}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/title_text_style"
            app:buttonVisibility = "@{viewModel.status}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/meduum_margin"
            android:text="@string/correspondence_address"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            tools:text="state correspondence header" />


        <TextView
            android:id="@+id/address"
            style="@style/rc_header_text"
            app:buttonVisibility = "@{viewModel.status}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            android:text="@{viewModel.correspondenceAddress}"
            tools:text="address" />

        <ImageView
            android:id="@+id/imgloadingVoterInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loadingImageState="@{viewModel.status}"
            android:contentDescription="@string/loading_status" />


        <Button
            android:id="@+id/button"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/meduum_margin"
            app:buttonVisibility = "@{viewModel.status}"
            android:onClick="@{()->viewModel.saveOrRemoveElection()}"
            app:buttonText="@{viewModel.isSaved()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>