<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>



    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/default_padding"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/search_title"
            android:text="@string/find_representative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title_text_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={viewModel.line1}"
            app:layout_constraintTop_toBottomOf="@id/search_title" />


        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@={viewModel.line2}"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:text="@={viewModel.city}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:entries="@array/states"
            app:stateValue="@{viewModel.state}"
            android:selectedItemPosition="@={viewModel.selectedStatePosition}"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLength="5"
            android:text="@={viewModel.postal}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/btn_style"
            android:text="@string/find_my_representative"
            android:layout_marginBottom="@dimen/small_margin"
            android:onClick="@{()->viewModel.onBtnGetRepresentativeClick()}"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_my_location"
            style="@style/btn_style"
            android:layout_marginTop="@dimen/meduum_margin"
            android:onClick="@{()->viewModel.onBtnGetMyLocationClicked()}"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_title"
            style="@style/title_text_style"
            android:layout_marginTop="@dimen/meduum_margin"
            android:layout_marginBottom="@dimen/meduum_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />
<!--
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            app:textLoadingStatus="@{viewModel.status}"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />
            -->
        <ImageView
            android:id="@+id/img_loading_rep"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:visibility="gone"
            app:loadingImageState="@{viewModel.status}"
            android:contentDescription="@string/loading_status"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            motion:visibilityMode="ignore"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_rc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:buttonVisibility = "@{viewModel.status}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            motion:visibilityMode="ignore"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>